--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.11"
+    "mongoose": "^5.10.11",
+    "react-modal": "^3.11.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
