--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
-    "react-modal": "^3.11.2"
+    "react-modal": "^3.11.2",
+    "react-responsive-carousel": "^3.2.11"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
