--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/awebb8/allhues#readme",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -32,7 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "react-modal": "^3.11.2",
-    "react-responsive-carousel": "^3.2.11"
+    "react-toastify": "^6.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
